crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_alias_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// Module import with alias
import constants.lib as c;

node g: Acceleration = @c::g0;
