crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_constants.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
assertion_line: 768
expression: formatted
---
// constants.gcl -- shared constants
pub const node g0: Acceleration = 9.80665 m/s^2;
