crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_fn_lib.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// lib.gcl -- utility DAG
dag double {
    param x: Dimensionless;

    node result: Dimensionless = @x * 2.0;
}
