crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_fn_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// Module import: values from lib
import "./lib.gcl";

const node TWO: Dimensionless = 2.0;
param x: Dimensionless = 21.0;

node y: Dimensionless = @x * TWO;
