crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_graph_ref_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// A pure module import cannot read runtime params from a DAG blueprint.
import params.lib;

node total_mass: Mass = @lib::dry_mass + @lib::fuel_mass;
