crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// Module import: import entire file as a module namespace
import constants.lib;

node g: Acceleration = @constants::g0;
