crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_module_import_mixed_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// Mixed: selective import and module include from different files
import lib.constants::{ g0 };
import lib.params;

node v_exhaust: Velocity = @params::isp * @g0;
node mass_ratio: Dimensionless = (@params::dry_mass + @params::fuel_mass) / @params::dry_mass;
node delta_v: Velocity = @v_exhaust * ln(@mass_ratio);
