crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_parent_import_child_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// child/main.gcl -- Attempts to import from parent directory using "../"
//
// This is expected to FAIL because the project root is the entry-point
// file's directory (child/). The import "../lib.gcl" resolves outside
// this boundary and is rejected by the path sandboxing check.
include "../lib.gcl" { base_value };
import "../lib.gcl" { SCALE };

node result: Dimensionless = @base_value * SCALE;
