crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_parent_import_lib.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// lib.gcl -- A library file in the parent directory
param base_value: Dimensionless = 42.0;
const node scale: Dimensionless = 2.0;
