crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_parent_import_manifest_child_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// child/main.gcl -- Imports from parent directory using "../"
//
// This succeeds because a graphcal.toml file exists in the parent directory,
// widening the project root from child/ to the manifest's directory.
import "../lib.gcl" { base_value, SCALE };

node result: Dimensionless = @base_value * SCALE;
