crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_rocket_split_constants.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// constants.gcl -- shared constants
pub dim Acceleration = Length / Time^2;
pub const node g0: Acceleration = 9.80665 m/s^2;
