crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_rocket_split_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// main.gcl -- rocket equation using imported constants and included params
import lib.constants::{ g0 };
include lib.params()::{ dry_mass, fuel_mass, isp };

node v_exhaust: Velocity = @isp * @g0;
node mass_ratio: Dimensionless = (@dry_mass + @fuel_mass) / @dry_mass;
node delta_v: Velocity = @v_exhaust * ln(@mass_ratio);
